# CHANGELOG
##############

Version 0.3.*:
--------------
43: contig_annotate__sylp added
42: preprocess__sylph added
41: --keep-going added as default option to run the pipeline
40: Order of the host decontamination changed, to avoid sequence similarity problems between different genomes
39: Hard-coded threads in reference__hosts__recompress changed to variable
39: Added the missing proteinortho files to be moved into result folder
38: Fixed the output for proteinortho
37: Output for DRAM_mag rule adjusted
36: Function names for bowtie rules harmonised
35: Function call to contig_annotate__prodigal improved
34: Optional Debug comments added to the Snakefile
33: DRAM mag rules added
32: Adjusted the Output ruleset for contig_annotate__camper and moved from folder to concrete files
31: Apply proteinortho now on the set of proteins obtains from the different MAG sets
30: Added bakta annotation for each MAG separately instead of applying it to one dereplicated MAG-set only
29: Summary tables for Diamond added
28: Bowtie2 and Humann2 were moved to own docker container 
27: Added camper to contig_annotate
26: Names of many rules were adjusted to follow a similary naming scheme
25: Krona got an own singularity image, as it downversion bowtie2 in the same image for some reason
24: Re-enabled the splif-fasta for proteinortho input
23: Krona plots added for kraken2
22: Eggnog does not throw an error anymore in case that no fast nvme tmp folder is provided
21: Added the camper module to annotate
20: In annotate/GTDB-TK the annot and classify folders won't be deleted anymore
19: Sylph added
18: Added a new proteinortho rule that takes entire bakta output as input, not splitted
17: More nvme memory to eggnog assigned
16: Added the --skip-plot option as default to Bakta to prevent error for large MAGs (needs to be re-added later as separate step)
15: Protect the eggnog logs that they are not deleted in case of an error (could be removed after trouble shooting)